syntax = "proto3";

package message_bus;

option java_multiple_files = true;
option java_outer_classname = "MessageEventTypeProtos";
option java_package = "com.volmyr.message_bus";

enum MessageEventType {
  TYPE1 = 0;
  TYPE2 = 1;
}
